fixes small overflow issue

--- a/client/src/styles/mystyle.scss
+++ b/client/src/styles/mystyle.scss
@@ -215,6 +215,7 @@ body {
     white-space: pre-wrap;
     height: 500px;
     margin: 15px;
+    word-wrap: break-word;
 }
 
 
